--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
 
         <tbody>
             <tr>
-                <td>Produto 1</td>
+                <td>Camisa</td>
                 <td>2</td>
                 <td>$5</td>
                 <td rowspan="2">Sim</td>
             </tr>
             <tr>
-                <td>Produto 2</td>
+                <td>Bermuda</td>
                 <td>5</td>
                 <td>$10</td>
             </tr>
             <tr>
-                <td>Produto 3</td>
+                <td>Sapato</td>
                 <td>3</td>
                 <td>$15</td>
                 <td>Não</td>
