trocado o nome de um dos produto

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <td rowspan="2">Sim</td>
             </tr>
             <tr>
-                <td>Bermuda</td>
+                <td>Calça Jeans</td>
                 <td>5</td>
                 <td>$10</td>
             </tr>
