Criando uma nova Coluna de de Cores

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <thead>
             <tr>
                 <th>Produto</th>
+                <th>Cor</th>
                 <th>Quantidade</th>
                 <th>Preço</th>
                 <th>Black Friday</th>
@@ -29,17 +30,20 @@
         <tbody>
             <tr>
                 <td>Camisa</td>
+                <td>Vermelha</td>
                 <td>2</td>
                 <td>$5</td>
                 <td rowspan="2">Sim</td>
             </tr>
             <tr>
                 <td>Calça Jeans</td>
+                <td>Azul</td>
                 <td>5</td>
                 <td>$10</td>
             </tr>
             <tr>
                 <td>Sapato</td>
+                <td>Marrom</td>
                 <td>3</td>
                 <td>$15</td>
                 <td>Não</td>
